--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ header {
     color: #fff;
     text-align: center;
     padding: 20px;
+    font-size: 24px;
 }
 
 nav ul {
@@ -19,6 +20,19 @@ nav ul {
     height: 100%; /* Buat tinggi ul sama dengan tinggi nav */
     display: flex;
     align-items: center; /* Pusatkan tautan navigasi secara vertikal */
+}
+
+/* Media query for screens with a maximum width of 600px */
+@media (max-width: 600px) {
+    header {
+        font-size: 18px; /* Reduce font size for smaller screens */
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 nav li {
